--- a/style.css
+++ b/style.css
@@ -90,3 +90,98 @@ body{
    flex-wrap: wrap;
    margin-left: 60px;
 }
+/* Mobile Phones*/
+@media screen and (max-width: 500px) {
+    .logo img{
+      justify-content: center;
+      height: 50px;
+      margin-left: 110px;
+      width: auto;
+      align-items: center;
+    }
+    .header-flex{
+       display:flex;
+       flex-direction:row;
+    }
+    .search{
+       margin-top: 90px;
+       margin-left: 10px;
+       width: 150px;
+       height: 25px;
+    }
+    .dropdown{
+       position: absolute;
+       top:80px;
+       left: 180px;
+       width: 100px;
+       height: 20px;
+    }
+    .next-line{
+       margin-left:5px;
+    }
+    .space{
+       margin:5px;
+       margin-left: 10px;
+       margin-top: 20px;
+       font-size: 15px;
+       flex-wrap: wrap;
+    }
+    .img{
+       width:100%;
+       height:80px;
+    }
+    .heading{
+       font-size: 25px;
+       margin-top: 10px;
+    }
+    .language{
+       font-size: 10px;
+    }
+   }
+   /*Tablets*/
+   @media screen and (min-width:501px) and (max-width:768px){
+       .logo img{
+           height: 50px;
+           margin-left: 40px;
+           width: auto;    
+       }
+       .search{
+           margin-left:190px;
+           margin-top: 30px;
+           width: 300px;
+       }
+       .dropdown{
+           margin-top: 30px;
+       }
+       .next-line{
+           margin-left: 100px;
+           margin-top: 20px;
+       }
+       .img{
+           width: 100%;
+           height: 150px;
+       }
+       .heading{
+           font-size: 30px;
+           margin-top: 10px;
+       }
+       .language{
+           margin-right: 10px;
+       }
+       .poster-boc{
+           display: flex;
+           flex-direction: row;
+           flex-wrap: wrap;
+       }
+       .movie-poster{
+         margin-left: 10px;
+         margin-top: 10px;
+         margin-right: 10px;
+   }
+   }
+       
+   
+   
+   
+   
+   
